--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Zelzele | Son 100 Deprem</string>
+    <string name="app_name">ZelzeleSon100Deprem</string>
 </resources>
